# vibeify-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 072923716b5c_reports_notifications_tasks.py  20260118_235358_convert_user_roles_to_table.py  26aae22c66ed_task_model_field.py  2ca6a85745cf_document_file_ext.py  2ec025f18963_initial_role.py  4e8ec93fb89e_document_schema.py  7fcf5b8c578c_rename_tasks.py  b27350d9d4c1_initial_migrations.py  ca918f25512c_initial.py  edd55bd41f36_document_schema.py
scripts/: celery-entrypoint.sh  celery-reload.py
src/vibeify_api/: main.py
src/vibeify_api/api/v1/: auth.py  discovery.py  documents.py  jobs.py  reports.py  review_items.py  router.py  users.py
src/vibeify_api/core/: __init__.py  celery_app.py  config.py  context.py  database.py  dependencies.py  exceptions.py  logging.py  s3.py  security.py
src/vibeify_api/models/: __init__.py  base.py  crawled_page.py  document.py  enums.py  notification.py  reports.py  review_item.py  role.py  task.py  user.py
src/vibeify_api/repository/: __init__.py  base.py  s3.py
src/vibeify_api/schemas/: auth.py  crawled_page.py  discovery.py  document.py  errors.py  jobs.py  requests.py  responses.py
src/vibeify_api/services/: __init__.py  base.py  crawled_page.py  document.py  reports.py  review_items.py  role.py  user.py
src/vibeify_api/tasks/: __init__.py  example.py
src/vibeify_api/tasks/jobs/: discovery.py
src/vibeify_api/tasks/orchestrators/: discovery.py
